# OmniStream

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.server  Dockerfile.web  Justfile  LICENSE  README.md  SECURITY.md  clippy.toml  deny.toml  docker-compose.prod.yml  rustfmt.toml  start-bin.sh  start.sh  stop.sh
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release-images.yml  release.yml
deploy/: .env.prod  deploy.sh
docs/: release-deployment.md  web-flow.md
patches/dioxus-router/: Cargo.toml
patches/dioxus-router/src/: lib.rs
scripts/: install-release.sh  release-start.sh  release-stop.sh  web_proxy_server.py
server/: Cargo.toml
server/src/: accounts.rs  app.rs  checker.rs  db.rs  downloads.rs  downloads_service.rs  main.rs  monitor.rs  platform.rs  recording.rs  router.rs  settings.rs  state.rs  storage.rs  storage_guard.rs  task_launcher.rs  tasks.rs  uploads.rs
server/src/accounts/: api.rs  bili.rs  models.rs  storage.rs
server/src/db/: downloads.rs  migrations.rs  settings.rs  tasks.rs  uploads.rs
server/src/recording/: runtime.rs  segment.rs  task_state.rs
server/src/uploader/: bilibili.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
web/: Cargo.toml  Dioxus.toml
web/src/: api.rs  app.rs  lib.rs  main.rs  models.rs
web/src/components/: accounts.rs  common.rs  downloads.rs  mod.rs  modals.rs  settings.rs  upload_taxonomy.rs  uploads.rs
web/src/styles/: forms.rs  layout.rs  mod.rs  modal.rs  pages.rs  table.rs
