[workspace]
members = ["shared", "server", "web"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.93"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
reqwest = { version = "0.13.4", features = ["json"] }

[patch.crates-io]
dioxus-router = { path = "patches/dioxus-router" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
