[package]
name = "server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" }
axum = "0.8.8"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

reqwest = { workspace = true }
tower-http = { version = "0.6.8", features = ["cors"] }

anyhow = { workspace = true }

dashmap = "6.1.0" # 高并发线程安全的 HashMap
uuid = { version = "1", features = ["v4"] }
regex = "1.12.2"
async-trait = "0.1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
base64 = "0.22"
md-5 = "0.10.6"
rand = "0.9.2"
url = "2.5"
chrono = "0.4.43"
biliup = { git = "https://github.com/biliup/biliup-rs.git", version = "0.2.4" }
futures = "0.3.31"


[lints]
workspace = true
