[package]
name = "app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[dependencies]
shared = { path = "../shared" }
dioxus = "0.7.3"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gloo-timers = { version = "0.3", features = ["futures"] }
urlencoding = "2.1.3"
web-sys = { version = "0.3", features = ["Window", "Location"] }

[lints]
workspace = true
